--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:eSkD9HjB/6BZL9cyEccmqNzrzmNrEZh0P3AYKm1U4u4=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://localhost
 
 LOG_CHANNEL=stack
 
