--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=https://uneasistencias.uneatlantico.es/
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=172.22.1.8
 DB_PORT=3306
 DB_DATABASE=rapframework
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=rap
+DB_PASSWORD=Rap2018$
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
