--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:eSkD9HjB/6BZL9cyEccmqNzrzmNrEZh0P3AYKm1U4u4=
 APP_DEBUG=false
-APP_URL=https://uneasistencias.uneatlantico.es/
+APP_URL=https://localhost
 
 LOG_CHANNEL=stack
 
