--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=https://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=172.22.1.8
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=rapframework
 DB_USERNAME=rap
