--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "infyomlabs/adminlte-templates": "5.6.x-dev",
         "infyomlabs/laravel-generator": "5.6.x-dev",
         "laravel/framework": "5.6.*",
+        "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.6.0",
         "maatwebsite/excel": "~2.1.0",
