--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravelcollective/html": "^5.6.0",
         "maatwebsite/excel": "~2.1.0",
         "muhamadrezaar/highcharts": "^1.0",
-        "spatie/laravel-backup": "^5.6"
+        "spatie/laravel-backup": "^5.6",
+        "spatie/laravel-permission": "^2.12"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
