--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:eSkD9HjB/6BZL9cyEccmqNzrzmNrEZh0P3AYKm1U4u4=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https:https://uneasistencias.uneatlantico.es/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=172.22.1.8
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=rapframework
 DB_USERNAME=rap
@@ -39,5 +39,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GOOGLE_ID=688703614782-ru7p2l1jqv09orduu9p78d47vp550090.apps.googleusercontent.com
 GOOGLE_SECRET=hkrxc-P7xCG-9B7St1z2qkGx
-GOOGLE_REDIRECT=https://localhost/framework/RaMVC-Laravel/public/login/google/callback
+GOOGLE_REDIRECT=https://uneasistencias.uneatlantico.es/login/google/callback
 
