--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:eSkD9HjB/6BZL9cyEccmqNzrzmNrEZh0P3AYKm1U4u4=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=https:https://uneasistencias.uneatlantico.es/
 
 LOG_CHANNEL=stack
