--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Uneasistencias
 APP_ENV=production
 APP_KEY=base64:eSkD9HjB/6BZL9cyEccmqNzrzmNrEZh0P3AYKm1U4u4=
 APP_DEBUG=false
