Trabajo a medias del filtro

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Uneasistencias
 APP_ENV=production
 APP_KEY=base64:eSkD9HjB/6BZL9cyEccmqNzrzmNrEZh0P3AYKm1U4u4=
-APP_DEBUG=false
-APP_URL=https:https://uneasistencias.uneatlantico.es/
+APP_DEBUG=true
+APP_URL=https://uneasistencias.uneatlantico.es/
 
 LOG_CHANNEL=stack
 
